# aura-os

./: .gitignore  CMakeLists.txt  README.md
bootloader/: linker.ld
bootloader/src/: boot.asm  kernel.asm
kernel/: kernel.c
